--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@xyflow/react": "^12.10.0",
     "emoji-picker-react": "^4.17.4",
+    "nodemailer": "^8.0.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-router-dom": "^7.13.0",
