--- a/api/package.json
+++ b/api/package.json
@@ -8,11 +8,13 @@
         "dev": "nodemon server.js"
     },
     "dependencies": {
+        "@types/multer": "^2.0.0",
         "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
         "dotenv": "^16.4.1",
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.2",
+        "multer": "^2.0.2",
         "mysql2": "^3.9.1"
     }
 }
