--- a/api/package.json
+++ b/api/package.json
@@ -9,12 +9,14 @@
     },
     "dependencies": {
         "@types/multer": "^2.0.0",
+        "@types/nodemailer": "^7.0.9",
         "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
         "dotenv": "^16.4.1",
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.2",
         "multer": "^2.0.2",
-        "mysql2": "^3.9.1"
+        "mysql2": "^3.9.1",
+        "nodemailer": "^8.0.0"
     }
 }
