--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "@types/multer": "^2.0.0",
         "@types/nodemailer": "^7.0.9",
+        "axios": "^1.13.4",
         "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
         "dotenv": "^16.4.1",
