--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
         "jsonwebtoken": "^9.0.2",
         "multer": "^2.0.2",
         "mysql2": "^3.9.1",
-        "nodemailer": "^8.0.0"
+        "nodemailer": "^8.0.0",
+        "stripe": "^14.0.0"
     }
 }
