--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@xyflow/react": "^12.10.0",
+    "dotenv": "^17.2.4",
     "emoji-picker-react": "^4.17.4",
+    "mysql2": "^3.16.3",
     "nodemailer": "^8.0.0",
+    "openai": "^6.18.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-router-dom": "^7.13.0",
