--- a/package.json
+++ b/package.json
@@ -11,15 +11,24 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@xyflow/react": "^12.10.0",
+    "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.4",
     "emoji-picker-react": "^4.17.4",
+    "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
+    "helmet": "^8.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.16.3",
     "nodemailer": "^8.0.0",
     "openai": "^6.18.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-router-dom": "^7.13.0",
-    "recharts": "^3.7.0"
+    "recharts": "^3.7.0",
+    "stripe": "^17.5.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
